--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ img {
 body {
   color: #444;
   font-size: 1.6rem;
-  font-family: "Gentium Book Plus", serif;
+  font-family: 'Gentium Book Plus', serif;
 }
 p {
   margin-bottom: .67em;
