--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ header h1 {
 /*-- Article Styles--*/
 article {
   width: 768px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 18px;
   line-height: 1.3;
 }
@@ -73,8 +75,8 @@ article figcaption {
   font-size: inherit;
 }
 .pagination {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 2em;
+  margin-right: 2em;
   width: 96%;
 }
 a.button {
