--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ header img {
   margin: 0 auto;
 }
 header h1 {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0 auto;
 }
 .small {
