--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,11 @@ header h1 {
   padding: 0 auto;
 }
 .small {
-  margin-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'LATO' SANS-SERIF;
+  font-weight: 900;
+  font-size: 50%;
 }
 /*-- Article Styles--*/
 article {
