--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,8 @@ header h1 {
 }
 .small {
   margin: 0 auto;
+  font-family: 'Lato', sans-serif;
   text-transform: capitalize;
-  font-family: 'Lato' sans-serif;
   font-weight: 900;
   font-size:100%;
 }
