--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,9 @@ article figure {
   margin: 0 0 1.25em 1.25em;
 }
 article figcaption {
-  font-size: inherit;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-weight: 200;
+  font-size: 50%;
 }
 .pagination {
   margin-left: 2em;
