--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ article figure {
   margin: 0 0 1.25em 1.25em;
 }
 article figcaption {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 200;
   font-size: 70%;
 }
