--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ header {
 header img {
   width: 100%;
   margin: 0 auto;
+  text-align: center;
 }
 header h1 {
   width: 510px;
@@ -63,6 +64,7 @@ header h1 {
   font-family: 'Lato', sans-serif;
   font-weight: 900;
   font-size:100%;
+  text-transform: uppercase;
 }
 /*-- Article Styles--*/
 article {
