adjustments of the buttons

--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,10 @@ article figcaption {
   font-size: 70%;
 }
 .pagination {
-  margin-left: 2em;
-  margin-right: 2em;
+  margin-top: auto;
+  margin-bottom: auto;
+  display: flex;
+  justify-content: space-between;
   width: 96%;
 }
 a.button {
