centering of the header buttons with display and justify content

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ footer {
 }
 /*-- Main Menu Styles--*/
 nav ul {
+  display: flex;
+  justify-content: space-between;
   list-style: none;
   padding: 1em;
 }
