--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,8 @@ a.button {
   border: 2px solid #888;
   padding: .4em 1em .4em 1em;
   text-decoration: none;
-  color: #6bc2f0;
-  border-radius: 100px;
+  color: #888;
+  border-radius: 200px;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 80%;
