--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,10 @@ nav, footer {
   background-color: #444;
 }
 footer {
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
-  padding: 1em 0 .3em 0;
+  padding: .5em;
   color: #D0D0D0;
 }
 /*-- Main Menu Styles--*/
