--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ footer {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  padding: .5px;
+  padding: 1em 0 .3em 0;
   color: #D0D0D0;
 }
 /*-- Main Menu Styles--*/
