--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ footer {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  padding: 1em;
+  padding: .25em;
   color: #D0D0D0;
 }
 /*-- Main Menu Styles--*/
