--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,12 @@ article figcaption {
   margin-top: auto;
   margin-bottom: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 96%;
 }
 a.button {
   border: 2px solid #888;
-  padding: .5em 1em .5em 1em;
+  padding: .4em 1em .4em 1em;
   text-decoration: none;
   color: #888;
   border-radius: 200px;
