--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,6 @@ article figure {
   float: right;
   margin: 0 0 1.25em 1.25em;
 }
-span.dropcap {
-  font-size: large; 
-  float: left;
-}
 article figcaption {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 200;
@@ -116,4 +112,9 @@ a.button:hover, a.button:active {
 @media screen and (max-width: 768px) {
   header {width: 96%;}
   article {width: 96%;}
+}
+.dropcap {
+  font-size: 4em;
+  float: left;
+  margin-right: 0.2em;
 }
