--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,9 @@ a.button:hover, a.button:active {
   header {width: 96%;}
   article {width: 96%;}
 }
-.eagle-lake-regular {
-  font-family: "Eagle Lake", serif;
+.ballet-uniquifier> {
+  font-family: "Ballet", serif;
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
@@ -123,5 +124,5 @@ a.button:hover, a.button:active {
   float: left;
   line-height: .75;
   margin-right: 0.2em;
-  font-family: "Eagle Lake", serif;
+  font-family: "Ballet", serif;
   }
