--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,14 @@ p {
   margin-bottom: .67em;
 }
 nav, footer {
-  background-color: #a68a6d;
+  background-color: #a18160;
 }
 footer {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   padding: .25em;
-  color: #a68a6d;
+  color: #a18160;
 }
 /*-- Main Menu Styles--*/
 nav ul {
