--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ footer {
   margin-right: auto;
   text-align: center;
   padding: .25em;
-  color: #a18160;
+  color: #F0F0F0;
 }
 /*-- Main Menu Styles--*/
 nav ul {
