--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,10 @@ article figcaption {
   width: 96%;
 }
 a.button {
-  border: 2px solid #888;
+  border: 2px solid #000000;
   padding: .4em 1em .4em 1em;
   text-decoration: none;
-  color: #888;
+  color: #F0F0F0;
   border-radius: 200px;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
