--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ a.button {
   border: 2px solid #000000;
   padding: .4em 1em .4em 1em;
   text-decoration: none;
-  color: #F0F0F0;
+  color: #888;
   border-radius: 200px;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
