--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ article figcaption {
   width: 96%;
 }
 a.button {
-  border: 2px solid #000000;
+  border: 2px solid #4c4848;
   padding: .4em 1em .4em 1em;
   text-decoration: none;
   color: #888;
