--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   font-family: 'Gentium Book Plus', serif;
 }
 body {
-  background: linear-gradient(#e3cba6);
+  background: linear-gradient(to bottom, #efe5d5, #e3cba6);
   background-size: cover;
 }
 p {
