--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@ body {
   font-family: 'Gentium Book Plus', serif;
 }
 body {
-  background: linear-gradient(to bottom, #efe5d5, #e3cba6);
-  background-size: cover;
+  background-color: #e3cba6; 
 }
 p {
   margin-bottom: .67em;
