--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   font-family: 'Gentium Book Plus', serif;
 }
 body {
-  background-color: #e3cba6; 
+  background-color: #d5cdc2; 
 }
 p {
   margin-bottom: .67em;
