--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   font-family: 'Gentium Book Plus', serif;
 }
 body {
-  background-color: #d5cdc2; 
+  background-color: #f9f5ef; 
 }
 p {
   margin-bottom: .67em;
