--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ nav a:link, nav a:visited {
   text-decoration: none;
 }
 nav a:hover, nav a:active  {
-  color: #F0F0F0;
+  color: #070707;
   text-decoration: underline;
 }
 nav a.active {
