--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ header h1 {
 .small {
   margin: 0 auto;
   font-family: 'Lato', sans-serif;
-  color:#512222;
+  color:#5f0e0e;
   font-weight: 900;
   font-size:100%;
   text-transform: uppercase;
